--- a/css/master.css
+++ b/css/master.css
@@ -143,7 +143,7 @@ address {
 .amount-bar-container {
 	display: grid;
 	grid-template-columns: auto 1fr;
-	column-gap: 2em;
+	column-gap: 1.5em;
 	align-items: center;
 }
 
@@ -202,6 +202,7 @@ address {
 	justify-content: space-between;
 	align-items: baseline;
 	column-gap: 1em;
+	max-width: 28em;
 }
 
 .loc-date p:first-child {
