--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -14,6 +14,7 @@
 
 /* Tooltip text */
 .tooltip .tooltip-text {
+	display: none;
 	visibility: hidden;
 	background-color: var(--tooltip-color);
 	color: #fff;
@@ -24,8 +25,6 @@
 	/* Position the tooltip text - see examples below! */
 	position: absolute;
 	z-index: 1;
-
-
 }
 
 .tooltip .tooltip-text {
@@ -39,6 +38,7 @@
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltip-text {
 	visibility: visible;
+	display: block;
 }
 
 .tooltip .tooltip-text::after {
